--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             alt="Email icon"
             class="icon contact-icon"
           />
-          <p><a href="mailto:mis.chmi2023@gmail.com">mis.chmi2023@gmail.com</a></p>
+          <p><a href="mailto:migz.dv8@gmail.com">migz.dv8@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
