--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
           <span></span>
           <span></span>
         </div>
-        <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contacts" onclick="toggleMenu()">Contacts</a></li>
+        <div class= "menu-links">
+          <li><a href="#about" onclick= "toggleMenu()">About</a></li>
+          <li><a href="#experience" onclick= "toggleMenu()">Experience</a></li>
+          <li><a href="#projects" onclick= "toggleMenu()">Projects</a></li>
+          <li><a href="#contacts" onclick= "toggleMenu()">Contacts</a></li>
         </div>
       </div>
     </nav>
+    <script src="script.js"></script>
+    </body>
+    </html>
     <section id="profile">
       <div class="section__pic-container">
         <img src="./assets/profile-pic-1.png" alt="Profile Picture" />
