--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         </div>
       </div>
     </nav>
-    <script src="script.js"></script>
+    <section id= "profile">
+      <div class="section__pic-container">
+        <img src="./assets/profile-pic-1.png" alt= "Profile Picture" />
+      </div>
+      </section>
+        <script src="script.js"></script>
     </body>
     </html>
-    <section id="profile">
-      <div class="section__pic-container">
-        <img src="./assets/profile-pic-1.png" alt="Profile Picture" />
-      </div>
-      <div class="section__text">
         <p class="section__text__p1">Hello I am</p>
         <h1 class="title">Michael De Vera</h1>
         <p class="section__text__p2">Frontend Developer</p>
