--- a/index.html
+++ b/index.html
@@ -38,21 +38,20 @@
     <section id= "profile">
       <div class="section__pic-container">
         <img src="./assets/profile-pic-1.png" alt= "Profile Picture" />
+        </div>
+        <div class = "section_text">
+        <p class= "section__text__p1">Hello I am</p>
+        <h1 class= "title">Michael De Vera</h1>
+        <p class= "section__text__p2">Frontend Developer</p>
+        <div class= "btn-container">
+          <button class= "btn btn-color-2"
+            onclick= "window.open('./assets/cv_mike_01.pdf')"> Download CV</button>
       </div>
       </section>
         <script src="script.js"></script>
     </body>
     </html>
-        <p class="section__text__p1">Hello I am</p>
-        <h1 class="title">Michael De Vera</h1>
-        <p class="section__text__p2">Frontend Developer</p>
-        <div class="btn-container">
-          <button
-            class="btn btn-color-2"
-            onclick="window.open('./assets/cv_mike_01.pdf')"
-          >
-            Download CV
-          </button>
+     
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
           </button>
