--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button class ="btn btn-color-1"
             onclick="location.href='./contact'">Contact Info</button>
         </div>
- <div id = "socials-container">
+        <div id = "socials-container">
           <img src = "assets/linkedin.png" alt = "My LinkedIn Profile"
           class = "icon" onclick = "location.href='https://linkedin.com'" />
           <img src = "assets/github.png" alt = "My Github Profile"
@@ -61,7 +61,17 @@
   </body>
   </html>
        
-      </div>
+
+
+
+
+
+
+
+
+
+
+
     </section>
     <section id="about">
       <p class="section__text__p1">Get to Know More</p>
@@ -69,7 +79,7 @@
       <div class="section-container">
         <div class="section__pic_container">
           <img
-            src="assets/about-pic.png"
+            src="./assets/about-pic.png"
             alt="Profile Picture"
             class="about-pic"
           />
@@ -78,51 +88,45 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="assets/experience.png"
+                src="./assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>
-                5+ years <br />
-                Frontend Developer
-              </p>
+              <p>5+ years <br />Frontend Developer</p>
             </div>
             <div class="details-container">
               <img
-                src="assets/education.png"
+                src="./assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
               <h3>Education</h3>
               <p>
                 B.S. in Information Technology <br />
+
               </p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged. It was
-              popularised in the 1960s with the release of Letraset sheets
-              containing Lorem Ipsum passages, and more recently with desktop
-              publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
+              reprehenderit et laborum, rem, dolore eum quod voluptate
+              exercitationem nobis, nihil esse debitis maxime facere minus sint
+              delectus velit in eos quo officiis explicabo deleniti dignissimos.
+              Eligendi illum libero dolorum cum laboriosam corrupti quidem, 
+              reiciendis ea magnam? Nulla, impedit fuga!
             </p>
           </div>
         </div>
       </div>
       <img
-        src="assets/arrow.png"
+        src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href = './#experience'"
       />
-        </section>
+    </section>
         <section id="experience">
           <p class="section_text_p1">Explore My</p>
           <h1 class="title">Experience</h1>
