--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             class = "icon" onclick = "location.href='https://github.com/mischmi2023'" />
         </div>
       </div>
-    
+    </section>
+    <script src="script.js"></script>
+  </body>
+  </html>
+       
+
 
 
 
