--- a/jstutorial.html
+++ b/jstutorial.html
@@ -67,9 +67,9 @@
         B brackets
         E exponents
         D division
-        M
-        A
-        S
+        M multiplication
+        A addition
+        S subraction
 
         */
 
