--- a/iteration.html
+++ b/iteration.html
@@ -75,12 +75,16 @@
         for(let o = 0; o < n; o++)
     {
         for (let p =0; p< n; p++)
-    {
-        console.log("Run");
-    }
-    }
+        {
+            console.log("Run");
+        }
+     }
     }
     nSquared(5);
+
+    // FOR OF & FOR EACH LOOPS
+
+    
     </script>
 </body>
 </html>
