--- a/index.html
+++ b/index.html
@@ -264,12 +264,15 @@
             <section id="projects">
               <p class="section_text_p1">Browse My Recent</p>
               <h1 class="title">Projects</h1>
+
               <div class="experience-details-container">
+
+                <!-- Project One -->
                   <div class="details-container color-container">
                     <div class="article-container">
                       <img 
                         src="./assets/project-1.png"
-                        alt="Project 1"
+                        alt="Project One"
                         class="project-img"
                       />
                     </div>
@@ -289,11 +292,13 @@
                     </button>
                   </div>
                 </div>
+
+                <!-- Project Two-->
                 <div class="details-container color-container">
                 <div class="article-container">
                 <img
                  src="./assets/project-2.png"
-                 alt="Project 2"
+                 alt="Project Two"
                  class="project-img"
                 />
              </div>
@@ -313,6 +318,8 @@
             </button>
            </div>
            </div>
+
+           <!-- Project Three -->
            <div class="details-container color-container">
               <div class="article-container">
                 <img
