--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="Logo">Michael De Vera</div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
+      <div class = "logo">Michael De Vera</div>
+      <div class =" hamburger-menu">
+        <div class = "hamburger-icon" onclick="toggleMenu()">
           <span></span>
           <span></span>
           <span></span>
