--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel = "stylesheet" href="style.css">
+    <link rel = "stylesheet" href="mediaqueries.css">
   </head>
   <body>
-    <nav id="desktop-nav">
-      <div class="Logo">Michael De Vera</div>
+    <nav id = "desktop-nav">
+      <div class = "logo">Michael De Vera</div>
       <div>
-        <ul class="nav-links">
+        <ul class= "nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -19,10 +19,10 @@
         </ul>
       </div>
     </nav>
-    <nav id="hamburger-nav">
+    <nav id ="hamburger-nav">
       <div class = "logo">Michael De Vera</div>
-      <div class =" hamburger-menu">
-        <div class = "hamburger-icon" onclick="toggleMenu()">
+      <div class = "hamburger-menu">
+        <div class = "hamburger-icon" onclick = "toggleMenu()">
           <span></span>
           <span></span>
           <span></span>
@@ -37,23 +37,23 @@
     </nav>
     <section id= "profile">
       <div class= "section__pic-container">
-        <img src= "./assets/profile-pic-1.png" alt= "Profile Picture" />
+        <img src= "./assets/profile-pic-1.png" alt= "Cloud Strife Profile Picture">
         </div>
         <div class = "section_text">
-          <p class= "section__text__p1">Hello I am</p>
-          <h1 class= "title">Michael De Vera</h1>
-          <p class= "section__text__p2">Frontend Developer</p>
-          <div class= "btn-container">
-            <button class= "btn btn-color-2"
+          <p class = "section__text__p1">Hello I am</p>
+          <h1 class = "title">Michael De Vera</h1>
+          <p class= ""section__text__p2>Frontend Developer</p>
+          <div class = "btn-container">
+            <button class = "btn btn-color-2"
             onclick= "window.open('./assets/cv_mike_01.pdf')"> Download CV</button>
             <button class ="btn btn-color-1"
             onclick="location.href='./contact'">Contact Info</button>
         </div>
         <div id = "socials-container">
-          <img src = "assets/linkedin.png" alt = "My LinkedIn Profile"
+          <img src = "./assets/linkedin.png" alt = "My LinkedIn Profile"
           class = "icon" onclick = "location.href='https://linkedin.com'" />
-          <img src = "assets/github.png" alt = "My Github Profile"
-            class = "icon" onclick = "location.href='https://github.com/mischmi2023'" />
+          <img src = "./assets/github.png" alt = "My Github Profile"
+            class = "icon" onclick = "location.href='https://github.com'" />
         </div>
       </div>
     </section>
@@ -79,7 +79,7 @@
       <div class="section-container">
         <div class="section__pic_container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/about-pic.jpg"
             alt="Profile Picture"
             class="about-pic"
           />
