--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id= "profile">
       <div class= "section__pic-container">
-        <img src= "./assets/profile-pic-1.png" alt= "Cloud Strife Profile Picture">
+        <img src= "./assets/profile-pic-1.jpg" alt= "Cloud Strife Profile Picture">
         </div>
         <div class = "section_text">
           <p class = "section__text__p1">Hello I am</p>
